--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22",
     "parser": "^0.1.4",
     "sequelize": "^6.32.0"
